<resources>
    <string name="app_name">Mealify</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_meals">Mealify - meals</string>
    <string name="title_activity_update">Update Meal</string>
    <string name="title_activity_add">Add a new meal</string>
    <string name="title_activity_text_hint">What did you eat?</string>
    <string name="update_activity_calories_hint">Amount of calories</string>
    <string name="update_activity_date_hint">When did you eat it?</string>
    <string name="update_activity_time_hint">When did you eat it (time)?</string>
    <string name="update_activity_save_button">Save</string>
    <string name="update_activity_delete_button">Remove</string>
    <string name="update_activity_invalid_date">Invalid date</string>
    <string name="update_activity_invalid_text">Invalid meal name</string>
    <string name="update_activity_invalid_calories">Invalid calories</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="today_fragment_sumCalories_label">Sum Calories today</string>
    <string name="userdeffilter_fragment_sumCalories_label">Sum Calories</string>
    <string name="calories_unit">kCal</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="settings_fname">First Name</string>
    <string name="settings_fname_hint">The first name of the user</string>
    <string name="settings_lname">Last Name</string>
    <string name="settings_lname_hint">The last name of the user</string>
    <string name="settings_gender">Gender</string>
    <string name="settings_gender_hint">The gender of the user</string>
    <string name="settings_email">Email</string>
    <string name="settings_email_hint">The email address of the user</string>
    <string name="settings_calories">Maximum Calories per day</string>
    <string name="settings_calories_hint">The maximum calorie intake for a day</string>
    <string name="settings_activity_tile">Settings</string>

    <string name="user_username">username</string>
    <string name="user_password">password</string>
    <string name="user_email">email</string>
    <string name="user_firstname">firstname</string>
    <string name="user_lastname">lastname</string>
    <string name="user_gender">gender</string>
    <string name="user_maxCalories">maxCalories</string>
</resources>
