<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.labcoop.hw.meals.views.settings.IntegerEditTextPreference
        android:key="@string/user_maxCalories"
        android:title="@string/settings_calories"
        android:inputType="number"
        android:numeric="integer"
        android:defaultValue="0"
        android:summary="@string/settings_calories_hint"
        android:dialogTitle="@string/settings_calories" />

    <EditTextPreference
        android:key="@string/user_firstname"
        android:title="@string/settings_fname"
        android:summary="@string/settings_fname_hint"
        android:dialogTitle="@string/settings_fname" />

    <EditTextPreference
        android:key="@string/user_lastname"
        android:title="@string/settings_lname"
        android:summary="@string/settings_lname_hint"
        android:dialogTitle="@string/settings_lname" />

    <EditTextPreference
        android:key="@string/user_email"
        android:title="@string/settings_email"
        android:summary="@string/settings_email_hint"
        android:dialogTitle="@string/settings_email" />


</PreferenceScreen>